# OrchestationAgentsSkillLike

./: .gitignore  LICENSE  README.md
.specify/: extensions.yml
demos/full-atlas-team-demo/: DEMO_PROMPT.md  EXPECTED_FLOW.md  FEATURE_EVIDENCE.md  README.md  ariadna-report.md  full_team_harness.py  pyproject.toml  task_service.py  test_full_team_harness.py  test_task_stats.py
demos/full-atlas-team-demo/.specify/memory/: constitution.md
demos/full-atlas-team-demo/.specify/specs/task-stats/: analysis-report.md  data-model.md  plan.md  research.md  spec.md  tasks.md
docs/: Atlas_Agents_Project_Document.md
plans/: agent-pack-compatibility-complete.md  agent-pack-compatibility-phase-1-complete.md  agent-pack-compatibility-plan.md  agent-semantic-compression-pass-plan-2026-03-25-complete.md  agent-semantic-compression-pass-plan-2026-03-25-phase-1-complete.md  agent-semantic-compression-pass-plan-2026-03-25-phase-2-complete.md  agent-semantic-compression-pass-plan-2026-03-25.md  atlas-static-trace-plan-2026-03-25-complete.md  atlas-static-trace-plan-2026-03-25-phase-1-complete.md  atlas-static-trace-plan-2026-03-25-phase-2-complete.md  atlas-static-trace-plan-2026-03-25.md  atlas-static-trace-test-case-2026-03-25.md  canonical-agent-pack-depth-upgrade-plan-phase-1-complete.md  canonical-agent-pack-depth-upgrade-plan.md  demo-seleccion-fuente-flujo-atlas-plan.md  external-ecosystem-orchestration-investigation.md  external-ecosystem-orchestration-merge-complete.md  external-ecosystem-orchestration-merge-phase-1-complete.md  external-ecosystem-orchestration-merge-plan.md  (+75 more)
(+305 files in other folders)
